# tinyraycaster

./: .gitignore  CMakeLists.txt  Makefile  main,
maps/: map01.txt
src/: main.cpp  raylib.h
